k8s/overlays/dev/deployment-web-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharebite-web
spec:
  replicas: 1
